{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "ebc13ce4-ad05-4c62-b34a-4126eb019826",
            "actions": [
                {
                    "name": "P1Movement",
                    "type": "Value",
                    "id": "9d7f4504-b825-40c9-95a9-2db8c5ed32a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "P2Movement",
                    "type": "Value",
                    "id": "611f0596-1230-4020-9a94-6645284454b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {

                    "name": "P1Attack",
                    "type": "Button",
                    "id": "cfe83970-a0b9-4daa-9258-bb5b18f34b0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7710e2ce-caff-4644-995b-25df508ee03a",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "3f1487de-364b-4d71-962e-b6958625b7c7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "48c5a7b7-baaf-4e2c-ac73-22e2ec2e136f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "855f4c55-53f0-43bc-8b14-107d0e51b653",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "87984886-74bc-4d27-ad61-8fd1e1eed28a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9e15fdfa-5b84-4835-976e-b36e05da34e8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9c99efba-5a28-45dd-9df6-157e775f89a3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "01e20dce-4b2b-480d-af9f-0484eabacd9b",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbf33530-8896-4e48-9952-b04ccc5b4b74",
                    "path": "<Keyboard>/w",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "P1Lunge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f36a025b-fdf4-41af-8541-69e0537b7383",
                    "path": "<Keyboard>/s",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "P1Lunge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "508817c6-00b1-47ce-bb29-b6ce971a180f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Lunge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41cff953-b4b8-4a4f-9b83-0f587123a1b3",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Lunge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6575fbb7-4337-4add-824e-63cb9a9a7141",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "P2Lunge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d62063b-92b1-476c-99ac-1e6acea4b8e9",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "P2Lunge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5af3fd01-059e-4259-b869-f0b9797b07e2",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Lunge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cda08e68-e18d-41a2-b21f-6cdc9ceae058",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Lunge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "884d7968-217f-4f23-b89c-755895c6e7a6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Tilt",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7549dca8-1c95-4ff8-8ba0-ae85cfb0012d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9e1812a6-8da4-48cb-a9d0-1e9a122aa70e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "ade31ba6-c19e-4d8f-8dab-15645a5be0ff",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Tilt",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7b1d4f47-5fee-4355-8b1a-14bc7f1c63e2",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6bef486c-7c4e-4ca9-8ae8-2a7b8998c650",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Tilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f1937d5-3cb9-43ce-95b3-a426cc3ec055",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "39920d36-0054-4fac-b6b5-274d623252d0",
            "actions": [
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "ab7d3440-f5b6-4b39-a75f-34f1cbb74aa4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "176eefd1-ae74-4e12-8cb3-63685634f3ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "8a80ca66-701a-4a8c-81de-d950a3f22806",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "35f9fddd-a087-400a-a241-50f1726aab5a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "4df386a0-c3b6-405d-864e-de2c9c005aa6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "9d3d744e-edf9-49ce-ae0b-234906898f26",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "7d11d063-e87c-4bee-b433-bb240a17ae12",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Navigate",
                    "type": "PassThrough",
                    "id": "69011c31-a557-4770-af85-d3412e186490",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a5c0b76d-b1c9-457b-a136-74d41fb5fc0e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1097f5c6-7e4d-4f88-8eff-8e21b5956e0e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a575aa85-3c05-4c23-bccd-1f2c5674e7fb",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb499efb-88d4-4f51-8c16-d956175eef5c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "041e4ec5-ce94-4fbb-97bc-b521e015b8d3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2465ab05-c88a-4cf2-aa2e-5731f9ed4a68",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43d745af-fb7d-4ca1-8838-73f1c1035b4d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acb1ffe8-ad04-4ab0-a4fc-c9524e363263",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}